Se completaron varias hojas de texto y se crearon sus respectivas hojas de estilo

--- a/index.html
+++ b/index.html
@@ -6,25 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>ThanksGood</title>
+    <title>Bienvenidos</title>
 </head>
 <body>
     <header>
         
-        <div class="logo"><i class='bx bx-planet'></i></i><a id="space"href="index.html">Space</a></div>
-        <nav><a href="">Home</a>
-            <a id="Features" href="">Features</a>
-            <a id="Pricing" href="">Pricing</a>
-            <a href="">Content</a>
-            <a id="Login" href="">Login</a>
+        <div class="logo"><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
+        <nav><a href="QuienesSomos.html">¿Quienes somos?</a>
+            <a id="Features" href="QueHacemos.html">¿Qué hacemos?</a>
+            <a id="Pricing" href="Opina.html">Danos tu opinión.</a>
+            <a id="Login" href="IniciarSesión.html">Iniciar sesión.</a>
          </nav>
     </header>
     <div id="Content">
-        <p>NAVIGATE THE UNIVERSE</p> <br>
-        <h1>Start Exploring Infinite Space</h1><br>
-        <p>Start your exploring in space, navigate and discover all the wonders of the universe.</p>
+        <h2>¿Aún no estas registrado en nuestra pagina?</h2> <br>
+        <h1>No hay problema</h1><br>
+        <h3>Registrate con nosotros con el siguiente boton:</h3>
         <br> 
-        <a id="Bottom" href="">Get Started</a>
+        <a id="Bottom" href="Register.html">Registrate aquí</a>
     </div>
+    <div class="piedepagina">
+        <p>Siguenos en nuestras redes sociales:</p>
+        <i class='bx bxl-instagram-alt'></i><a class="SocialRed" href="">SCE-ForAll</a>
+        <i class='bx bxl-twitter'></i><a class="SocialRed" href="">@SCE-X</a>   <br>
+        <br>
+        <br>
+        <h4>¿Dondé estamos ubicados?</h4><br>
+        <p>Cra. 12 #2b Oeste-2 a 2b Oeste-62, COMUNA 3, Cali, Valle del Cauca</p>
+    </div>
+    <!--SCE = Space Covers for Everyone = Cubiertas Espaciales Para Todos. -->
 </body>
 </html>
