Proceso de culminación del css de todas las hojas de texto (html)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav><a href="QuienesSomos.html">¿Quienes somos?</a>
             <a id="Features" href="QueHacemos.html">¿Qué hacemos?</a>
             <a id="Pricing" href="Opina.html">Danos tu opinión.</a>
-            <a id="Login" href="IniciarSesión.html">Iniciar sesión.</a>
+            <a id="Login" href="IniciarSesión.html"><strong>Iniciar sesión.</strong></a>
          </nav>
     </header>
     <div id="Content">
@@ -23,7 +23,7 @@
         <h1>No hay problema</h1><br>
         <h3>Registrate con nosotros con el siguiente boton:</h3>
         <br> 
-        <a id="Bottom" href="Register.html">Registrate aquí</a>
+        <a id="Bottom" href="Register.html"><strong>Registrate aquí</strong></a>
     </div>
     <div class="piedepagina">
         <p>Siguenos en nuestras redes sociales:</p>
@@ -35,5 +35,6 @@
         <p>Cra. 12 #2b Oeste-2 a 2b Oeste-62, COMUNA 3, Cali, Valle del Cauca</p>
     </div>
     <!--SCE = Space Covers for Everyone = Cubiertas Espaciales Para Todos. -->
+    <!--https://mayferson.github.io/TrabajoFinalBasico.github.io/-->
 </body>
 </html>
