--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav><a href="QuienesSomos.html">¿Quienes somos?</a>
             <a id="Features" href="QueHacemos.html">¿Qué hacemos?</a>
             <a id="Pricing" href="Opina.html">Danos tu opinión.</a>
-            <a id="Login" href="IniciarSesión.html"><strong>Iniciar sesión.</strong></a>
+            <button id="logout">logout</button>
          </nav>
     </header>
     <div id="Content">
@@ -36,5 +36,6 @@
     </div>
     <!--SCE = Space Covers for Everyone = Cubiertas Espaciales Para Todos. -->
     <!--https://mayferson.github.io/TrabajoFinalBasico.github.io/-->
+    <script src="js/index.js"></script>
 </body>
 </html>
