--- a/Register.html
+++ b/Register.html
@@ -6,21 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
-    <link rel="stylesheet" href="css/Register.css">
+    <link rel="stylesheet" href="css/Register-Login.css">
 </head>
 <body>
     <header>
         
-        <div class="logo"><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
+        <div><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
     </header>
-    <div>
-        <p><strong>Crea tu cuenta:</strong></p>
-        Nombre:     <input type="text" name="name" id="name"> <br>
-        Email:      <input type="email" name="email" id="Email"> <br>
-        Contraseña: <input type="password" name="contraseña" id="password"> <br>
-        Confirma tu contraseña: <input type="password" name="ConfirmarContraseña" id="Ccontraseña">
-        <p>Si ya estas registrado con nosotros, inicia sesión <a href="IniciarSesión.html">aquí</a></p>
-    </div>
+    <section>
+        <h2>Registrate</h2>
+            <form id="signupForm">
+            <label>Nombre:</label>
+            <input type="text" placeholder="Pepito" id="name" required autofocus> 
+            <label>Mail:</label>
+            <input type="email" placeholder="example@gmail.com" id="email" required autofocus> 
+            <label>Contraseña:</label>
+            <input type="password" placeholder="12345678..." id="password" required> 
+            <input type="submit" value="Ingresar">
+    </form>
+    <p>Ya tienes una cuenta? <a href="IniciarSesión.html">Inicia</a></p>
+    </section>
     
+    </div>
+    <script src="js/Register.js"></script>
 </body>
 </html>
