--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <header>
         
         <div class="logo"><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
-        <nav><a href="QuienesSomos.html">¿Quienes somos?</a>
-            <a id="Features" href="QueHacemos.html">¿Qué hacemos?</a>
+        <nav><a href="SobreNosotros.html">¿Quienes somos?</a>
             <a id="Pricing" href="Opina.html">Danos tu opinión.</a>
             <button id="logout">logout</button>
          </nav>
     </header>
     <div id="Content">
-        <h2>¿Aún no estas registrado en nuestra pagina?</h2> <br>
-        <h1>No hay problema</h1><br>
-        <h3>Registrate con nosotros con el siguiente boton:</h3>
+        <h2>Bienvenido a mi pequeña pagina web</h2> <br>
+        <h1>Navega y conoce todo sobre nosotros</h1><br>
+        <h3>Si aun no tienes cuenta, registrate aquí:</h3>
         <br> 
-        <a id="Bottom" href="Register.html"><strong>Registrate aquí</strong></a>
+        <a id="Buttom" href="Register.html"><strong>Registrate aquí</strong></a>
     </div>
     <div class="piedepagina">
         <p>Siguenos en nuestras redes sociales:</p>
