Se ha agregado la pagina ¿Qué Ofrecemos?

--- a/Opina.html
+++ b/Opina.html
@@ -12,7 +12,8 @@
     <header>
         
         <div class="logo"><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
-        <nav><a href="SobreNosotros.html">¿Quienes somos?</a>
+        <nav><a href="QuienesSomos.html">¿Quienes somos?</a>
+            <a id="Pricing" href="QueOfrecemos.html">¿Qué ofrecemos?</a>
             <button id="logout">logout</button>
          </nav>
          </header>
