--- a/IniciarSesión.html
+++ b/IniciarSesión.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         
-        <div><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
+        <div id="Header"><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
     </header>
     <section>
         <h2>Login</h2>
