--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <header>
         
         <div class="logo"><i class='bx bx-planet'></i></i><a id="space"href="index.html">SCE</a></div>
-        <nav><a href="SobreNosotros.html">¿Quienes somos?</a>
+        <nav><a href="QuienesSomos.html">¿Quienes somos?</a>
             <a id="Pricing" href="Opina.html">Danos tu opinión.</a>
+            <a id="Pricing" href="QueOfrecemos.html">¿Qué ofrecemos?</a>
             <button id="logout">logout</button>
          </nav>
     </header>
